gccida/g0/prepare_operand
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/optabs.c:3709:52: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  prepare_operand( int icode, rtx x, int opnum, machine_mode mode, machine_mode wider_mode, int unsignedp) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/optabs.c:3709:71: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  prepare_operand( int icode, rtx x, int opnum, machine_mode mode, machine_mode wider_mode, int unsignedp) 
                                                                      ^
                                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/optabs.c:3718:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[opnum] + 8)) ) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/optabs.c:3718:41: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[opnum] + 8)) ) 
                                        ^~~~~~~~~~~
                                        insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/optabs.c:3716:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[icode].operand[opnum].predicate( 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/optabs.c:3719:28: error: use of undeclared identifier 'machine_mode'
return copy_to_mode_reg( ( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[opnum] + 8), xa); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/optabs.c:3719:66: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
return copy_to_mode_reg( ( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[opnum] + 8), xa); 
                                                                 ^~~~~~~~~~~
                                                                 insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prepare_operand/src/obj/optabs.o] Error 1
